service delete add function
